Updated Hungarian translation using Weblate
Currently translated at 100.0% (263 of 263 strings)

Co-authored-by: summoner001 <summoner@vivaldi.net>
Translate-URL: https://hosted.weblate.org/projects/feeder/android-strings/hu/
Translation: Feeder/Android strings

--- a/app/src/main/res/values-hu/strings.xml
+++ b/app/src/main/res/values-hu/strings.xml
@@ -2,7 +2,7 @@
 <resources>
     <string name="tag">Címke</string>
     <string name="url">Webcím</string>
-    <string name="add_feed_search_hint">Hírfolyam webcím</string>
+    <string name="add_feed_search_hint">Hírfolyam webcíme</string>
     <string name="empty_feed_top">Nincs itt semmi olvasnivaló. Szeretne inkább…</string>
     <string name="title">Cím</string>
     <string name="save">Mentés</string>
@@ -19,43 +19,43 @@
     <string name="search_feed_empty_hint">Adjon meg egy hírfolyam címet</string>
     <string name="mark_as_read">Megjelölés olvasottként</string>
     <string name="mark_as_unread">Megjelölés olvasatlanként</string>
-    <string name="mark_all_as_read">Mind megjelölése olvasottként</string>
+    <string name="mark_all_as_read">Az összes megjelölése olvasottként</string>
     <string name="edit_feed">Hírfolyam szerkesztése</string>
     <string name="delete_feed">Hírfolyam törlése</string>
-    <string name="show_all_items">Minden elem megjelenítése</string>
+    <string name="show_all_items">Az összes elem megjelenítése</string>
     <string name="show_unread_items">Olvasatlan elemek megjelenítése</string>
     <string name="new_items_available">Új elemek érhetők el</string>
     <string name="view">Nézet</string>
     <string name="no_tag">Nincs címke</string>
     <string name="notify_for_new_items">Értesítés új elemeknél</string>
     <string name="dont_notify_for_new_items">Értesítések leállítása</string>
-    <string name="toggle_read_status">Olvasó nézet váltása</string>
+    <string name="toggle_read_status">Olvasónézet átváltása</string>
     <string name="open_link_in_browser">Hivatkozás megnyitása böngészőben</string>
-    <string name="no_such_feed">Ilyen hírfolyam nem található. Esetleg próbáljon HTTPS-t használni?</string>
+    <string name="no_such_feed">Nem található ilyen hírfolyam. Próbálja meg a HTTPS használatát.</string>
     <string name="export_feeds_to_opml">Hírfolyamok exportálása OPML-be</string>
     <string name="import_feeds_from_opml">Hírfolyamok importálása OPML-ből</string>
-    <string name="indicator_for_mark_as_read">Olvasottként megjelölés gomb</string>
+    <string name="indicator_for_mark_as_read">Megjelölés olvasottként jelző</string>
     <string name="share">Megosztás</string>
     <string name="nothing_to_display">Nincs mint megjeleníteni!</string>
     <string name="title_activity_settings">Beállítások</string>
     <string name="sync_option_manually">Kézileg</string>
-    <string name="sync_option_every_15min">Minden 15 percben</string>
-    <string name="sync_option_every_30min">Minden 30 percben</string>
-    <string name="sync_option_every_hour">Minden órában</string>
-    <string name="sync_option_every_3_hours">Minden 3 órában</string>
-    <string name="sync_option_every_6_hours">Minden 6 órában</string>
-    <string name="sync_option_every_12_hours">Minden 12 órában</string>
-    <string name="sync_option_every_day">Minden nap</string>
-    <string name="synchronization">Szinkronizálás alatt</string>
-    <string name="syncing">Szinkronizálás alatt</string>
+    <string name="sync_option_every_15min">15 percenként</string>
+    <string name="sync_option_every_30min">30 percenként</string>
+    <string name="sync_option_every_hour">Óránként</string>
+    <string name="sync_option_every_3_hours">3 óránként</string>
+    <string name="sync_option_every_6_hours">6 óránként</string>
+    <string name="sync_option_every_12_hours">12 óránként</string>
+    <string name="sync_option_every_day">Naponta</string>
+    <string name="synchronization">Szinkronizálás</string>
+    <string name="syncing">Szinkronizálás</string>
     <string name="only_on_wifi">Csak Wi-Fi-n</string>
-    <string name="show_thumbnails">Előképek mutatása</string>
+    <string name="show_thumbnails">Bélyegképek megjelenítése</string>
     <string name="may_result_data_charges">Adatforgalmi díjat vonhat maga után.</string>
     <string name="only_when_charging">Csak töltés alatt</string>
     <string name="image_loading">Kép betöltése</string>
     <string name="no_activity_for_link">Először telepítsen valamit a hivatkozás megnyitásához</string>
     <string name="on_startup">Alkalmazás indításkor</string>
-    <string name="block_list">Blokkolási lista</string>
+    <string name="block_list">Tiltólista</string>
     <string name="add_item">Elem hozzáadása</string>
     <string name="show_fab">Lebegő akciógomb megjelenítése</string>
     <string name="include_mobile_hotspots">Mobil hotspotokat is beleértve</string>
@@ -73,7 +73,7 @@
     <string name="open_link_in_web_view">Hivatkozás megnyitása webes nézetben</string>
     <string name="open_in_web_view">Megnyitás webes nézetben</string>
     <string name="max_feed_items">Hírfolyamonkénti maximum elem</string>
-    <string name="could_not_load_url">Cím nem betölthető</string>
+    <string name="could_not_load_url">Nem tölthető be a webcím</string>
     <string name="theme_system">Rendszer</string>
     <string name="theme_automatic">Automatikus</string>
     <string name="theme_day">Nappal</string>
@@ -86,28 +86,28 @@
     <string name="sort_oldest_first">Legrégebbi elől</string>
     <string name="sort">Rendezési szempont</string>
     <string name="send_bug_report">Hibajelentés küldése</string>
-    <string name="no_email_client">E-mail kliens nem megnyitható</string>
+    <string name="no_email_client">Nem nyitható meg az E-mail kliens</string>
     <string name="javascript">JavaScript</string>
-    <string name="mark_items_above_as_read">A fentiek megjelölése olvasottként</string>
+    <string name="mark_items_above_as_read">A fentebbiek megjelölése olvasottként</string>
     <string name="discovered_feeds_list">Talált hírfolyamok listája</string>
-    <string name="toggle_tag_expansion">Címke kiegészítés kapcsolása</string>
+    <string name="toggle_tag_expansion">Címke-kiegészítés átváltása</string>
     <string name="expanded_tag">Címke megnyitása</string>
     <string name="contracted_tag">Bezárt címke</string>
     <string name="preload_custom_tab">Egyéni lap előtöltése</string>
-    <string name="failed_to_parse">%1$s nem feldolgozható</string>
+    <string name="failed_to_parse">Nem dolgozható fel a következő: %1$s</string>
     <string name="fetch_full_article">Egész cikk lekérése</string>
     <string name="fetch_full_articles_by_default">Egész cikk lekérése alapértelmezetten</string>
     <string name="failed_to_fetch_full_article">Nem kérhető le az egész cikk</string>
-    <string name="failed_to_open_article">Cikk nem megnyitható</string>
+    <string name="failed_to_open_article">Nem nyitható meg a cikk</string>
     <string name="fetching_full_article">Teljes cikk lekérése…</string>
-    <string name="failed_to_load_text_to_speech">Szövegfelolvasás nem tölthető be</string>
+    <string name="failed_to_load_text_to_speech">Nem tölthető be a szöveg a felolvasáshoz</string>
     <string name="go_back">Vissza</string>
     <string name="open_menu">Menü megnyitása</string>
-    <string name="go_to_feed">Ugrás erre: %1$s</string>
+    <string name="go_to_feed">Ugrás a következőre: %1$s</string>
     <string name="unread_adjective">Olvasatlan</string>
     <string name="already_read">Már elolvasott</string>
     <string name="showing_only_unread_articles">Csak olvasatlan cikkek megjelenítése</string>
-    <string name="showing_all_articles">Minden cikk megjelenítése</string>
+    <string name="showing_all_articles">Az összes cikk megjelenítése</string>
     <string name="synchronize_feeds">Hírfolyamok szinkronizálása</string>
     <string name="zero_unread_articles">%1$s olvasatlan cikk</string>
     <string name="one_unread_article">%1$s olvasatlan cikk</string>
@@ -119,11 +119,11 @@
     <string name="feed_item_style_card">Kártya</string>
     <string name="generate_extra_unique_ids">Extra egyéni azonosítók generálása</string>
     <string name="only_enable_for_bad_id_feeds">Csak rossz azonosítókkal rendelkező hírfolyamok számára engedélyezze</string>
-    <string name="failed_to_import_OPML">Sikertelen OPML importálás</string>
-    <string name="failed_to_export_OPML">Sikertelen OPML exportálás</string>
-    <string name="device_sync">Eszköz szinkronizáció</string>
+    <string name="failed_to_import_OPML">Nem sikerült az adatok importálás az OPML fájlból</string>
+    <string name="failed_to_export_OPML">Nem sikerült az adatok exportálása OPML fájlba</string>
+    <string name="device_sync">Eszköz-szinkronizáció</string>
     <string name="add_new_device">Új eszköz hozzáadása</string>
-    <string name="device_sync_financed_by_community">Ezt a szolgálatatást a közösség állja. Fontolja meg a támogatást ha hasznosnak találja.</string>
+    <string name="device_sync_financed_by_community">Ezt a szolgáltatást a közösség fizeti. Fontolja meg az adományozást, ha hasznosnak találja.</string>
     <string name="this_device">%1$s (ez az eszköz)</string>
     <string name="disconnect_device_from_sync">Eszköz leválasztása a szinkronizálási láncról</string>
     <string name="devices_on_sync_chain">Eszközök a szinkronizálási láncon</string>
@@ -146,11 +146,11 @@
     <string name="only_from_end">Csak a végéről</string>
     <string name="from_anywhere">Bárhonnan</string>
     <string name="swipe_to_mark_as_read">Húzza félre az olvasottnak jelöléshez</string>
-    <string name="are_you_sure_leave_sync_chain">Biztos benne, hogy el akarja hagyni a szinkronizálási láncot?</string>
+    <string name="are_you_sure_leave_sync_chain">Biztosan el akarja hagyni a szinkronizálási láncot?</string>
     <string name="no_barcode_scanner_installed">Nem található vonalkódolvasó</string>
     <string name="permission_read_desc">Engedélyezi az alkalmazás számára, hogy hírfolyamokat és cikkeket olvasson</string>
     <string name="permission_read_label">Feeder csak olvasási engedély</string>
-    <string name="open_enclosed_media">Média melléklet megnyitása</string>
+    <string name="open_enclosed_media">Médiamelléklet megnyitása</string>
     <string name="open_enclosed_media_file">%1$s megnyitása</string>
     <string name="resume_reading">Olvasás folytatása</string>
     <string name="read_article">Hangos felolvasás</string>
@@ -159,18 +159,18 @@
     <string name="sync">Szinkronizálás</string>
     <string name="view_debug_log">Hibakeresési napló megtekintése</string>
     <string name="new_based_on_this">Ehhez hasonló újak</string>
-    <string name="all_feeds">Minden hírfolyam</string>
+    <string name="all_feeds">Összes hírfolyam</string>
     <string name="check_for_updates">Új cikkek keresése…</string>
     <string name="sync_status">Szinkronizálás állapota</string>
     <string name="touch_to_play_video">Érintse meg a videó indításhoz</string>
     <string name="open_feed">Hírfolyam megnyitása</string>
-    <string name="mark_items_below_as_read">Alábbiak megjelölése olvasottként</string>
+    <string name="mark_items_below_as_read">A lentebbiek megjelölése olvasottként</string>
     <string name="battery_optimization_disabled">Ki</string>
     <string name="battery_optimization">Akkumulátoroptimalizáció</string>
     <string name="battery_optimization_enabled">Be</string>
     <string name="feed_item_style_compact">Kompakt</string>
     <string name="feed_item_style_super_compact">Szuper kompakt</string>
-    <string name="invalid_url">Nem érvényes webcím</string>
+    <string name="invalid_url">Érvénytelen webcím</string>
     <string name="remove_device">Eszköz eltávolítása</string>
     <string name="sync_to_fetch">Szinkronizálás a cikk lekéréséhez</string>
     <string name="new_indicator">Új</string>
@@ -191,11 +191,11 @@
     <string name="many_tags">%1$s címke</string>
     <string name="other_tags">%1$s címke</string>
     <string name="failed_to_fetch_full_article_missing_link">A hírfolyamból hiányzik a cikk hivatkozása</string>
-    <string name="failed_to_fetch_full_article_not_html">A hivatkozás nem egy HTML dokumentum</string>
+    <string name="failed_to_fetch_full_article_not_html">A hivatkozás nem egy HTML-dokumentum</string>
     <string name="failed_to_fetch_full_article_missing_body">Semmi nem található a lekéréshez</string>
     <string name="dynamic_theme_use">Dinamikus színek</string>
-    <string name="feed_icon">Hírfolyam ikon</string>
-    <string name="mark_as_read_on_scroll">Megjelölés olvasottként görgetésnél</string>
+    <string name="feed_icon">Hírfolyam ikonja</string>
+    <string name="mark_as_read_on_scroll">Megjelölés olvasottként görgetéskor</string>
     <string name="skip_to_next">Ugrás a következőre</string>
     <string name="set_language">Nyelv beállítása</string>
     <string name="only_available_on_android_n">Csak Android %1$s-n és újabb rendszereken érhető el</string>
@@ -209,22 +209,22 @@
     <string name="saved_article">Cikk mentve</string>
     <string name="save_article">Cikk mentése</string>
     <string name="theme_e_ink">E-papír</string>
-    <string name="article_list_settings">Cikk lista</string>
+    <string name="article_list_settings">Cikk-lista</string>
     <string name="show_only_title">Csak a cím megjelenítése</string>
     <string name="filter_noun">Szűrő</string>
     <string name="recently_read_adjective">Nemrég olvasott</string>
     <string name="read_adjective">Olvasás</string>
     <string name="saved_adjective">Mentve</string>
-    <string name="failed_to_download">Sikertelen letöltés</string>
+    <string name="failed_to_download">Nem sikerült a letöltés</string>
     <string name="failed_to_parse_rss_feed">Nem sikerült feldolgozni az RSS hírfolyamot</string>
     <string name="http_error">HTTP hiba</string>
     <string name="failed_to_parse_json_feed">Nem sikerült feldolgozni a JSON hírfolyamot</string>
     <string name="unsupported_content_type">Nem támogatott tartalomtípus</string>
-    <string name="failed_to_parse_full_article">Nem sikerült a teljes cikket feldolgozni</string>
-    <string name="no_url">Nincs URL</string>
+    <string name="failed_to_parse_full_article">Nem sikerült feldolgozni a teljes cikket</string>
+    <string name="no_url">Nincs webcím</string>
     <string name="content_is_not_html">A tartalom nem HTML</string>
     <string name="max_lines">Maximum sorok</string>
-    <string name="failed_to_parse_the_page">Sikertelen az oldal feldolgozása</string>
+    <string name="failed_to_parse_the_page">Nem sikerült feldolgozni az oldalt</string>
     <string name="no_body_in_response">Nincs tartalma a válasznak</string>
     <string name="no_feeds_in_the_page">Nincsenek hírfolyamok az oldalon</string>
     <string name="show_reading_time">Várható olvasási idő megjelenítése</string>
@@ -251,7 +251,7 @@
     <string name="touch_to_play_audio">Érintse meg a hang lejátszásához</string>
     <string name="show_title_unread_count">Olvasatlan cikkek számának megjelenítése a címben</string>
     <string name="api_key">API kulcs</string>
-    <string name="model_id">Modellazonosító</string>
+    <string name="model_id">Modell-azonosító</string>
     <string name="azure_api_version">Azure API verzió</string>
     <string name="no_models_were_found">Nem találhatók modellek</string>
     <string name="azure_deployment_id">Azure üzembehelyezési azonosító</string>
@@ -260,5 +260,6 @@
     <string name="openai_settings">OpenAI integráció</string>
     <string name="unable_to_load_models">Nem lehet betölteni a modelleket.</string>
     <string name="show_message">Üzenet megjelenítése</string>
-    <string name="open_drawer_on_fab">A hírfolyam megjelenítése miután az összes meg lett jelölve olvasottként</string>
+    <string name="open_drawer_on_fab">A hírfolyam megjelenítése miután az összes cikk meg lett jelölve olvasottként</string>
+    <string name="nostr_feed_description">%1$s Nostr-cikkei</string>
 </resources>
