Updated Bulgarian translation using Weblate
Currently translated at 100.0% (263 of 263 strings)

Co-authored-by: trunars <trunars@gmail.com>
Translate-URL: https://hosted.weblate.org/projects/feeder/android-strings/bg/
Translation: Feeder/Android strings

--- a/app/src/main/res/values-bg/strings.xml
+++ b/app/src/main/res/values-bg/strings.xml
@@ -261,4 +261,5 @@
     <string name="api_key">API ключ</string>
     <string name="show_message">Покажи съобщение</string>
     <string name="open_drawer_on_fab">Покажи емисии след маркиране на всичко като прочетено</string>
+    <string name="nostr_feed_description">Nostr статии от %1$s</string>
 </resources>
