Updated German translation using Weblate
Currently translated at 100.0% (263 of 263 strings)

Co-authored-by: VfBFan <drop0815@posteo.de>
Translate-URL: https://hosted.weblate.org/projects/feeder/android-strings/de/
Translation: Feeder/Android strings

--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -261,4 +261,5 @@
     <string name="azure_api_version">Azure-API-Version</string>
     <string name="show_message">Nachricht anzeigen</string>
     <string name="open_drawer_on_fab">Feeds anzeigen, nachdem alle als gelesen markiert wurden</string>
+    <string name="nostr_feed_description">Nostr-Artikel von %1$s</string>
 </resources>
