--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -261,4 +261,5 @@
     <string name="azure_deployment_id">Identificación de implementación de Azure</string>
     <string name="show_message">Mostrar mensaje</string>
     <string name="open_drawer_on_fab">Mostrar feeds después de marcar todo como leído</string>
+    <string name="nostr_feed_description">Artículos de Nostr por %1$s</string>
 </resources>
