--- a/app/src/main/res/values-el/strings.xml
+++ b/app/src/main/res/values-el/strings.xml
@@ -261,4 +261,5 @@
     <string name="list_of_available_models">Λίστα διαθέσιμων μοντέλων</string>
     <string name="show_message">Εμφάνιση μηνύματος</string>
     <string name="open_drawer_on_fab">Εμφάνιση ροών μετά την επισήμανση όλων ως αναγνωσμένα</string>
+    <string name="nostr_feed_description">Άρθρα Nostr από %1$s</string>
 </resources>
