--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -276,4 +276,6 @@
   <string name="list_of_available_models">List of available models</string>
   <string name="show_message">Show message</string>
   <string name="open_drawer_on_fab">Show feeds after marking all as read</string>
+    <string name="on">On</string>
+  <string name="off">Off</string>
 </resources>
