Updated Danish translation using Weblate
Currently translated at 100.0% (265 of 265 strings)

Co-authored-by: ERYpTION <eryption.ar9q2@slmail.me>
Translate-URL: https://hosted.weblate.org/projects/feeder/android-strings/da/
Translation: Feeder/Android strings

--- a/app/src/main/res/values-da/strings.xml
+++ b/app/src/main/res/values-da/strings.xml
@@ -262,4 +262,6 @@
     <string name="open_drawer_on_fab">Vis feeds efter markering af alt som læst</string>
     <string name="show_message">Vis besked</string>
     <string name="nostr_feed_description">Nostr-artikler af %1$s</string>
+    <string name="on">Til</string>
+    <string name="off">Fra</string>
 </resources>
