--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -262,4 +262,6 @@
     <string name="show_message">Pokaż wiadomość</string>
     <string name="open_drawer_on_fab">Pokazuj kanały po oznaczeniu wszystkiego jako przeczytane</string>
     <string name="nostr_feed_description">Artykuły Nostr od %1$s</string>
+    <string name="on">Włączone</string>
+    <string name="off">Wyłączone</string>
 </resources>
