Updated Serbian translation using Weblate
Currently translated at 100.0% (265 of 265 strings)

Co-authored-by: eevan78 <ivan.pesic@gmail.com>
Translate-URL: https://hosted.weblate.org/projects/feeder/android-strings/sr/
Translation: Feeder/Android strings

--- a/app/src/main/res/values-sr/strings.xml
+++ b/app/src/main/res/values-sr/strings.xml
@@ -262,4 +262,6 @@
     <string name="show_message">Прикажи поруку</string>
     <string name="open_drawer_on_fab">Када се све обележи као прочитано, прикажи изворе</string>
     <string name="nostr_feed_description">Nostr чланци по %1$s</string>
+    <string name="on">Укључено</string>
+    <string name="off">Искључено</string>
 </resources>
