Updated French translation using Weblate
Currently translated at 100.0% (265 of 265 strings)

Co-authored-by: Matth78 <3684177+Matth7878@users.noreply.github.com>
Translate-URL: https://hosted.weblate.org/projects/feeder/android-strings/fr/
Translation: Feeder/Android strings

--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -262,4 +262,6 @@
     <string name="show_message">Montrer le message</string>
     <string name="open_drawer_on_fab">Montrer les flux après avoir marqué tout lu</string>
     <string name="nostr_feed_description">Articles Nostr par %1$s</string>
+    <string name="off">Inactif</string>
+    <string name="on">Actif</string>
 </resources>
