Updated German translation using Weblate
Currently translated at 100.0% (265 of 265 strings)

Co-authored-by: VfBFan <drop0815@posteo.de>
Translate-URL: https://hosted.weblate.org/projects/feeder/android-strings/de/
Translation: Feeder/Android strings

--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -262,4 +262,6 @@
     <string name="show_message">Nachricht anzeigen</string>
     <string name="open_drawer_on_fab">Feeds anzeigen, nachdem alle als gelesen markiert wurden</string>
     <string name="nostr_feed_description">Nostr-Artikel von %1$s</string>
+    <string name="on">Ein</string>
+    <string name="off">Aus</string>
 </resources>
