lang: updated Italian translation using Weblate
Currently translated at 100.0% (265 of 265 strings)

Co-authored-by: Francesco Saltori <francescosaltori@gmail.com>
Translate-URL: https://hosted.weblate.org/projects/feeder/android-strings/it/
Translation: Feeder/Android strings

--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -226,7 +226,7 @@
     <string name="unsupported_content_type">Contenuto non supportato</string>
     <string name="failed_to_parse_full_article">Errore nel parsing dell\'intero articolo</string>
     <string name="no_body_in_response">Nessun contenuto</string>
-    <string name="theme_e_ink">Carta elettronica</string>
+    <string name="theme_e_ink">E-Ink</string>
     <string name="add_anyway">Aggiungi comunque</string>
     <string name="open_browser_in_split_screen">Apri il browser in schermata divisa</string>
     <string name="show_reading_time">Mostra il tempo di lettura stimato</string>
@@ -244,22 +244,24 @@
     <string name="one_word">%1$s parola</string>
     <string name="close_menu">Chiudi menù</string>
     <string name="export_saved_articles">Esporta articoli salvati</string>
-    <string name="failed_to_export_saved_articles">Impossibile esportare articoli salvati</string>
-    <string name="skip_duplicate_articles">Saltare articoli doppi</string>
+    <string name="failed_to_export_saved_articles">Impossibile esportare gli articoli salvati</string>
+    <string name="skip_duplicate_articles">Salta gli articoli duplicati</string>
     <string name="skip_duplicate_articles_desc">Gli articoli con link o titoli identici ad articoli esistenti vengono ignorati</string>
-    <string name="feed_item_style_compact_card">Scheda Compatta</string>
+    <string name="feed_item_style_compact_card">Scheda compatta</string>
     <string name="touch_to_play_audio">Tocca per riprodurre l\'audio</string>
     <string name="show_title_unread_count">Mostra nel titolo il numero di articoli non letti</string>
     <string name="show_message">Mostra messaggio</string>
     <string name="api_key">Chiave API</string>
-    <string name="model_id">Id modello</string>
+    <string name="model_id">ID modello</string>
     <string name="azure_api_version">Versione API Azure</string>
     <string name="unable_to_load_models">Non è possibile caricare i modelli.</string>
     <string name="no_models_were_found">Non sono stati trovati modelli</string>
     <string name="openai_settings">Integrazione OpenAI</string>
     <string name="summarize">Riepilogo</string>
-    <string name="azure_deployment_id">Id dell\'implementazione Azure</string>
+    <string name="azure_deployment_id">ID della distribuzione di Azure</string>
     <string name="list_of_available_models">Elenco dei modelli disponibili</string>
     <string name="open_drawer_on_fab">Mostra i feed dopo averli contrassegnati come letti</string>
-    <string name="nostr_feed_description">Nostri articoli di %1$s</string>
+    <string name="nostr_feed_description">Articoli di Nostr da %1$s</string>
+    <string name="on">Abilitato</string>
+    <string name="off">Disabilitato</string>
 </resources>
