add search button

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -2,4 +2,5 @@
 <resources>
 
     <string name="by_author_on_date">by %1$s, %2$s</string>
+  <string name="search_noun">Search</string>
 </resources>
