lang: updated Greek translation using Weblate
Currently translated at 100.0% (265 of 265 strings)

Co-authored-by: Λευτέρης Τ <lefteris592@gmail.com>
Translate-URL: https://hosted.weblate.org/projects/feeder/android-strings/el/
Translation: Feeder/Android strings

--- a/app/src/main/res/values-el/strings.xml
+++ b/app/src/main/res/values-el/strings.xml
@@ -262,4 +262,6 @@
     <string name="show_message">Εμφάνιση μηνύματος</string>
     <string name="open_drawer_on_fab">Εμφάνιση ροών μετά την επισήμανση όλων ως αναγνωσμένα</string>
     <string name="nostr_feed_description">Άρθρα Nostr από %1$s</string>
+    <string name="on">Ενεργό</string>
+    <string name="off">Ανενεργό</string>
 </resources>
