feat: added a search function (#647)
* add search button

* improve search

* fix formatting

* translation

* move search into Repository

* always show search bar

* fix test

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -276,6 +276,8 @@
   <string name="list_of_available_models">List of available models</string>
   <string name="show_message">Show message</string>
   <string name="open_drawer_on_fab">Show feeds after marking all as read</string>
-    <string name="on">On</string>
+  <string name="on">On</string>
   <string name="off">Off</string>
+  <string name="search_verb">Search</string>
+  <string name="cancel_search">Cancel search</string>
 </resources>
