lang: updated German translation using Weblate
Currently translated at 100.0% (267 of 267 strings)

Co-authored-by: VfBFan <drop0815@posteo.de>
Translate-URL: https://hosted.weblate.org/projects/feeder/android-strings/de/
Translation: Feeder/Android strings

--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -264,4 +264,6 @@
     <string name="nostr_feed_description">Nostr-Artikel von %1$s</string>
     <string name="on">Ein</string>
     <string name="off">Aus</string>
+    <string name="cancel_search">Suche abbrechen</string>
+    <string name="search_verb">Suche</string>
 </resources>
