lang: updated Hungarian translation using Weblate
Currently translated at 100.0% (267 of 267 strings)

Co-authored-by: summoner001 <summoner@vivaldi.net>
Translate-URL: https://hosted.weblate.org/projects/feeder/android-strings/hu/
Translation: Feeder/Android strings

--- a/app/src/main/res/values-hu/strings.xml
+++ b/app/src/main/res/values-hu/strings.xml
@@ -264,4 +264,6 @@
     <string name="nostr_feed_description">%1$s Nostr-cikkei</string>
     <string name="off">Kikapcsolva</string>
     <string name="on">Bekapcsolva</string>
+    <string name="search_verb">Keresés</string>
+    <string name="cancel_search">Keresés visszavonása</string>
 </resources>
