lang: updated Serbian translation using Weblate
Currently translated at 100.0% (267 of 267 strings)

Co-authored-by: eevan78 <ivan.pesic@gmail.com>
Translate-URL: https://hosted.weblate.org/projects/feeder/android-strings/sr/
Translation: Feeder/Android strings

--- a/app/src/main/res/values-sr/strings.xml
+++ b/app/src/main/res/values-sr/strings.xml
@@ -264,4 +264,6 @@
     <string name="nostr_feed_description">Nostr чланци по %1$s</string>
     <string name="on">Укључено</string>
     <string name="off">Искључено</string>
+    <string name="search_verb">Претражи</string>
+    <string name="cancel_search">Откажи претрагу</string>
 </resources>
