lang: updated Spanish translation using Weblate
Currently translated at 99.2% (265 of 267 strings)

Co-authored-by: Fordas <fordas15@gmail.com>
Translate-URL: https://hosted.weblate.org/projects/feeder/android-strings/es/
Translation: Feeder/Android strings

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -262,4 +262,6 @@
     <string name="show_message">Mostrar mensaje</string>
     <string name="open_drawer_on_fab">Mostrar feeds después de marcar todo como leído</string>
     <string name="nostr_feed_description">Artículos de Nostr por %1$s</string>
+    <string name="search_verb">Buscar</string>
+    <string name="cancel_search">Cancelar búsqueda</string>
 </resources>
