lang: updated Spanish translation using Weblate
Currently translated at 100.0% (267 of 267 strings)

Co-authored-by: Eskuero <3skuero@gmail.com>
Translate-URL: https://hosted.weblate.org/projects/feeder/android-strings/es/
Translation: Feeder/Android strings

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -264,4 +264,6 @@
     <string name="nostr_feed_description">Artículos de Nostr por %1$s</string>
     <string name="search_verb">Buscar</string>
     <string name="cancel_search">Cancelar búsqueda</string>
+    <string name="on">Activo</string>
+    <string name="off">Inactivo</string>
 </resources>
